# distribute_frame

./: CMakeLists.txt  README.md  config.yaml  main.cpp  text  xxx
app/: CMakeLists.txt
app/mapreduce/: CMakeLists.txt  map1_test.cpp  map2_test.cpp  master_test.cpp  reduce1_test.cpp  reduce2_test.cpp
app/rpc/: CMakeLists.txt  client.cpp  provider.cpp  userservice.pb.cc  userservice.pb.h  userservice.proto
app/tools/: logmain.cpp
src/kv_raft/: kv_client.cpp  kv_server.cpp  raftmessage.pb.cc  raftmessage.proto
src/kv_raft/include/: kv_client.h  kv_server.h  raftmessage.pb.h
src/mapreduce/: README.md  master.cpp  worker.cpp
src/mapreduce/include/: master.h  worker.h
src/rpc/: README.md  init.cpp  rpcchannel.cpp  rpcheader.pb.cc  rpcheader.proto  rpcprovider.cpp  zookeeperutil.cpp
src/rpc/include/: init.h  rpcchannel.h  rpcheader.pb.h  rpcprovider.h  zookeeperutil.h
src/tools/: README.md  lock.cpp  logger.cpp
src/tools/include/: lock.h  logger.h
test/: inittest.cpp  protobuftest.cpp
test/rpc/: provider.cpp
